@@ -16,7 +16,10 @@ JUnit repository on GitHub.
 [[release-notes-5.11.1-junit-platform-bug-fixes]]
 ==== Bug Fixes
 
-* ❓
+* `NamespacedHierarchicalStore` no longer throws an exception after it has been closed if
+  the store is queried via one of the `get(...)` or `getOrComputeIfAbsent(...)` methods;
+  however, if a `getOrComputeIfAbsent(...)` invocation results in the computation of a new
+  value, an exception will still be thrown.
 
 [[release-notes-5.11.1-junit-platform-deprecations-and-breaking-changes]]
 ==== Deprecations and Breaking Changes
@@ -35,7 +38,8 @@ JUnit repository on GitHub.
 [[release-notes-5.11.1-junit-jupiter-bug-fixes]]
 ==== Bug Fixes
 
-* ❓
+* `TestWatcher` callback methods can once again access data in the
+  `ExtensionContext.Store`.
 
 [[release-notes-5.11.1-junit-jupiter-deprecations-and-breaking-changes]]
 ==== Deprecations and Breaking Changes
